--- a/resources/css/hasana.css
+++ b/resources/css/hasana.css
@@ -68,6 +68,10 @@ body {
     padding-top: 0;
     padding-bottom: 15px; /* Height of bottom nav */
 }
+body.hasana-body {
+    margin: 0;
+    padding-top: 0;
+}
 h2 {
     margin-top: 0;
     margin-bottom: 0;
@@ -84,6 +88,10 @@ h2 {
     right: 0;
     z-index: 1000;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+.app-header.sticky-top {
+    top: 0;
+    margin-top: 0;
 }
 .header-content {
     display: flex;
